--- a/src/Data/projects.json
+++ b/src/Data/projects.json
@@ -24,7 +24,7 @@
         "background_image": "https://i.ibb.co/F8XJ4gN/IMG-4968-Angela-Wu.jpg",
         "title": "Penn Through my Eyes",
         "subtitle": "Candid Expressions",
-        "link": "/confessions",
+        "link": "/throughmyeyes",
         "description": "If we give you this camera, can you take some photos and pass it on to another Penn student? Our goal is to engage the Penn community in a shared activity: taking snapshots of our lives and passing the camera onwards!"
     },
     {
